--- a/templates/index.html
+++ b/templates/index.html
@@ -60,7 +60,7 @@
   <!-- Table -->
   <table class="table-responsive">
     <tr class="headtable"><td><h3>#</h3></td><td><h3>Theme</h3></td><td><h3>Value</h3></td><tr>
-   <tr class="tablelist"><td><h3>1</h3></td><td><div class="them"><h3>Основы Python</h3></div></td><td><p>
+   <tr class="tablelist"><td><h3>1</h3></td><td><div class="them"><h3>Основы Python</h3></div></td><td>
      <div class="value">
       <li>zen, pep8, pylint, tools, IDE</li>
       <li>консоль, типы данных, операторы </li>
@@ -68,35 +68,35 @@
       <li>исключения и разбор стектрейса</li>
       <li>кодировка в Python</li>
      </div>                                                                              
-   </p></td><tr>
-<tr class="tablelist"><td><h3>2</h3></td><td><div class="them"><h3>Строки и итераторы</h3></div></td><td><p>
+   </td></tr>
+<tr class="tablelist"><td><h3>2</h3></td><td><div class="them"><h3>Строки и итераторы</h3></div></td><td>
 <div class="value">
 <li>работа со строками и итерируемыми типами</li>
 <li>запуск скрипта и параметры </li>
 <li>git http://try.github.com/levels/ </li>
 </div>                                                                              
-</p></td><tr>
-<tr class="tablelist"><td><h3>3</h3></td><td><div class="them"><h3>Функции и модульность</h3></div></td><td><p>
+</td></tr>
+<tr class="tablelist"><td><h3>3</h3></td><td><div class="them"><h3>Функции и модульность</h3></div></td><td>
 <div class="value">
 <li>функции (def, lambda)</li>
 <li>генераторы списков</li>
 <li>модули, структура </li>
 </div>                                                                              
-</p></td><tr>
-<tr class="tablelist"><td><h3>4</h3></td><td><div class="them"><h3>Библиотеки и пакетный менеджер</h3></div></td><td><p>
+</td></tr>
+<tr class="tablelist"><td><h3>4</h3></td><td><div class="them"><h3>Библиотеки и пакетный менеджер</h3></div></td><td>
 <div class="value">
 <li>встроенные библиотеки http://docs.python.org/</li>
 <li>сторонние библиотеки (менеджер пакетов) PYPI </li>
 <li>PYTHONPATH и виртуальное окружение  </li>
 </div>                                                                              
-</p></td><tr>
-<tr class="tablelist"><td><h3>5</h3></td><td><div class="them"><h3>Классы и ООП, основ</h3></div></td><td><p>
+</td></tr>
+<tr class="tablelist"><td><h3>5</h3></td><td><div class="them"><h3>Классы и ООП, основ</h3></div></td><td>
 <div class="value">
 <li>синтаксис, атрибуты, методы, инстанцирование </li>
 <li>все объект, служебные методы </li>
 </div>                                                                              
-</p></td><tr>
-<tr class="tablelist"><td><h3>6</h3></td><td><div class="them"><h3>Классы и ООП, возможности Python</h3></div></td><td><p>
+</td></tr>
+<tr class="tablelist"><td><h3>6</h3></td><td><div class="them"><h3>Классы и ООП, возможности Python</h3></div></td><td>
 <div class="value">
 <li>инкапсуляция, наследование, полиморфизм </li>
 <li>переопределение методов </li>
@@ -104,41 +104,41 @@
 <li> абстрактные классы</li>
 <li>статические методы </li>
 </div>                                                                              
-</p></td><tr>
-<tr class="tablelist"><td><h3>7</h3></td><td><div class="them"><h3>Работа с файлами</h3></div></td><td><p>
+</td></tr>
+<tr class="tablelist"><td><h3>7</h3></td><td><div class="them"><h3>Работа с файлами</h3></div></td><td>
 <div class="value">
 <li> запись и чтение файлов</li>
 <li>методы объектов-файлов </li>
 <li>csv, json </li>
 </div>                                                                              
-</p></td><tr>
-<tr class="tablelist2"><td><h3>8</h3></td><td><div class="them"><h3>Работа с датами</h3></div></td><td><p>
+</td></tr>
+<tr class="tablelist2"><td><h3>8</h3></td><td><div class="them"><h3>Работа с датами</h3></div></td><td>
 <div class="value2">
 <li>модуль datetime </li>
 </div>                                                                              
-</p></td><tr>
-<tr class="tablelist2"><td><h3>9</h3></td><td><div class="them"><h3>Основы html/css</h3></div></td><td><p>
+</td></tr>
+<tr class="tablelist2"><td><h3>9</h3></td><td><div class="them"><h3>Основы html/css</h3></div></td><td>
 <div class="value2">
 <li> html - теги и свойства</li>
 <li>css - свойства и селекторы </li>
 <li> каскадное переопределение свойств</li>
 </div>                                                                              
-</p></td><tr>
-<tr class="tablelist2"><td><h3>10</h3></td><td><div class="them"><h3>Основы JavaScript</h3></div></td><td><p>
+</td></tr>
+<tr class="tablelist2"><td><h3>10</h3></td><td><div class="them"><h3>Основы JavaScript</h3></div></td><td>
 <div class="value2">
 <li>Зачем разработчику backend нужно знать js? </li>
 <li> DOM</li>
 <li> JS, jQuery, Ajax</li>
 </div>                                                                              
-</p></td><tr>
-<tr class="tablelist2"><td><h3>11</h3></td><td><div class="them"><h3>Основы Web, HTTP</h3></div></td><td><p>
+</td></tr>
+<tr class="tablelist2"><td><h3>11</h3></td><td><div class="them"><h3>Основы Web, HTTP</h3></div></td><td>
 <div class="value2">
 <li>Django. “Hello world!” </li>
 <li>HTTP (GET, POST), (200, 404, 500), headers, cookies </li>
 <li> Инструменты отладки браузера (Firebug, Web Developer)</li>
 </div>                                                                              
-</p></td><tr>
-<tr class="tablelist2"><td><h3>12</h3></td><td><div class="them"><h3>Django first steps</h3></div></td><td><p>
+</td></tr>
+<tr class="tablelist2"><td><h3>12</h3></td><td><div class="them"><h3>Django first steps</h3></div></td><td>
 <div class="value2">
 <li> почему django?</li>
 <li>введение и описание фреймворка </li>
@@ -149,8 +149,8 @@
 <li>админка</li>
 <li>статика</li>
 </div>                                                                              
-</p></td><tr>
-<tr class="tablelist2"><td><h3>13</h3></td><td><div class="them"><h3>Структура Web приложения</h3></div></td><td><p>
+</td></tr>
+<tr class="tablelist2"><td><h3>13</h3></td><td><div class="them"><h3>Структура Web приложения</h3></div></td><td>
 <div class="value2">
 <li> MVC</li>
 <li>Views </li>
@@ -161,8 +161,8 @@
 <li>обработка и изменение хедеров</li>
 <li>мидлвар</li>
 </div>                                                                              
-</p></td><tr>
-<tr class="tablelist2"><td><h3>14</h3></td><td><div class="them"><h3>Работа с базами данных, ORM</h3></div></td><td><p>
+</td></tr>
+<tr class="tablelist2"><td><h3>14</h3></td><td><div class="them"><h3>Работа с базами данных, ORM</h3></div></td><td>
 <div class="value2">
 <li>модели и поля, типы полей и атрибуты </li>
 <li> связи между таблицами и проектирование БД</li>
@@ -171,8 +171,8 @@
 <li> QuerySet</li>
 <li>Raw-sql </li>
 </div>                                                                              
-</h3></td><tr>
-<tr class="tablelist3"><td><h3>15</h3></td><td><div class="them"><h3>Кастомизация админки</h3></div></td><td><p>
+</h3></td></tr>
+<tr class="tablelist3"><td><h3>15</h3></td><td><div class="them"><h3>Кастомизация админки</h3></div></td><td>
 <div class="value3">
 <li>Класс админки</li>
 <li> настройка отображения виджетов</li>
@@ -181,8 +181,8 @@
 <li>admin actions, редактирование полей в ListView </li>
 <li>Admin dashboard </li>
 </div>                                                                              
-</p></td><tr>
-<tr class="tablelist3"><td><h3>16</h3></td><td><div class="them"><h3>Язык шаблонов</h3></div></td><td><p>
+</td></tr>
+<tr class="tablelist3"><td><h3>16</h3></td><td><div class="them"><h3>Язык шаблонов</h3></div></td><td>
 <div class="value3">
 <li> Синтаксис, логические конструкции
 теги и фильтры</li>
@@ -190,8 +190,8 @@
 <li>Понятие контекста, контекст процессор </li>
 <li> теги и фильтры</li>
 </div>                                                                              
-</p></td><tr>
-<tr class="tablelist3"><td><h3>17</h3></td><td><div class="them"><h3>Forms</h3></div></td><td><p>
+</td></tr>
+<tr class="tablelist3"><td><h3>17</h3></td><td><div class="them"><h3>Forms</h3></div></td><td>
 <div class="value3">
 <li> Формы</li>
 <li>Типы полей </li>
@@ -199,23 +199,23 @@
 <li>Атрибуты </li>
 <li>Валидация </li>
 </div>                                                                              
-</p></td><tr>
-<tr class="tablelist3"><td><h3>18</h3></td><td><div class="them"><h3>Class-based (Generic) Views</h3></div></td><td><p>
+</td></tr>
+<tr class="tablelist3"><td><h3>18</h3></td><td><div class="them"><h3>Class-based (Generic) Views</h3></div></td><td>
 <div class="value3">
 <li> Встроенные class-based views (TemplateView, ListView, ItemView)</li>
 <li> Использование форм с class-based views</li>
 <li>Миксины </li>
 </div>                                                                              
-</h3></td><tr>
-<tr class="tablelist3"><td><h3>19</h3></td><td><div class="them"><h3>Реализация стандартных задач</h3></div></td><td><p>
+</h3></td></tr>
+<tr class="tablelist3"><td><h3>19</h3></td><td><div class="them"><h3>Реализация стандартных задач</h3></div></td><td>
 <div class="value3">
 <li>Отправка емейл </li>
 <li>Кеширование </li>
 <li> Интернационализация</li>
 <li> Signup/Login</li>
 </div>                                                                              
-</p></td><tr>
-<tr class="tablelist3"><td><h3>20</h3></td><td><div class="them"><h3>Средства отладки и тестирование</h3></div></td><td><p>
+</td></tr>
+<tr class="tablelist3"><td><h3>20</h3></td><td><div class="them"><h3>Средства отладки и тестирование</h3></div></td><td>
 <div class="value3">
 <li>logging </li>
 <li>pdb </li>
@@ -224,14 +224,14 @@
 <li>unit-tests </li>
 <li>selenium </li>
 </div>                                                                              
-</p></td><tr>
-<tr class="tablelist3"><td><h3>21</h3></td><td><div class="them"><h3>Деплоймент</h3></div></td><td><p>
+</td></tr>
+<tr class="tablelist3"><td><h3>21</h3></td><td><div class="them"><h3>Деплоймент</h3></div></td><td>
 <div class="value3">
 <li>nginx </li>
 <li>Управление статикой </li>
 <li>Деплоймент </li>
 </div>                                                                              
-</p></td><tr>
+</td></tr>
 
   </table>
 </div>
