--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Python Bursa</title>
+    <title>Self_info</title>
     <!-- Bootstrap -->
     <link href="../static/css/style.css" rel="stylesheet">
     <link href="../static/css/bootstrap.css" rel="stylesheet">
@@ -50,7 +50,7 @@
 
 <table class="table table-hover">
   <tr class="head_self_table"><td><h3>Name</h3></td><td><h3>Kostyantin</h3></td><tr>
-  <tr class="head_self_table"><td><h3>Sername</h3></td><td><h3>Moroz</h3></td><tr>
+  <tr class="head_self_table"><td><h3>Surname</h3></td><td><h3>Moroz</h3></td><tr>
 <tr class="head_self_table"><td><h3>Patronymic</h3></td><td><h3>Igorevich</h3></td><tr>
 <tr class="head_self_table"><td><h3>Birth Date</h3></td><td><h3>October, 15</h3></td><tr>
 <tr class="head_self_table"><td><h3> Address</h3></td><td><h3>Ukraine, Kharkiv, Velika Kilceva str.</h3></td><tr>
@@ -66,13 +66,13 @@
   <div class="panel-heading"><h2 class="self_raiting" >Performance</h2></div>
 
 <table class="table table-responsive">
-  <tr class="raiting_head"><td><h3>Course</h3></td><td><h3>Week</h3></td><td><h3>Task</h3></td><td><h3>Average Grade</h3></td><td><h3>Raiting</h3></td><tr>
-  <tr class="raiting_row"><td><h3>PY101</h3></td><td><h3>week1</h3></td><td><h3>Tests</h3></td><td><h3>100%</h3></td><td> <h3></h3></td><tr>
-  <tr class="raiting_row"><td><h3></h3></td><td><h3></h3></td><td><h3>Problem Task 1</h3></a></td><td><h3>100%</h3></td><td><h3></h3></td><tr>
-  <tr class="raiting_row"><td><h3></h3></td><td><h3></h3></td><td><h3>Problem Task 2</h3></td><td><h3>100%</h3></td><td><h3></h3></td><tr>
-  <tr class="raiting_row"><td><h3></h3></td><td><h3>week2</h3></td><td><h3>Tests</h3></td><td><h3>100%</h3></td><td><h3></h3></td><tr>
-  <tr class="raiting_row"><td><h3></h3></td><td><h3></h3></td><td><h3>Problem Task 1</h3></td><td><h3>100%</h3></td><td><h3></h3></td><tr>
-  <tr class="raiting_row"><td><h3></h3></td><td><h3></h3></a></td><td><h3>Problem Task 2</h3></a></td><td><h3>100%</h3></td><td><h3>1200</h3></td><tr>
+  <tr class="raiting_head"><td><h3>Course</h3></td><td><h3>Week</h3></td><td><h3>Task</h3></td><td><h3>Average Grade</h3></td><td><h3>Rating</h3></td><tr>
+  <tr class="raiting_row"><td><h3>PY101</h3></td><td><h3>week1</h3></td><td><h3>Tests</h3></td><td><h3>100%</h3></td><td> <h3></h3></td><tr/>
+  <tr class="raiting_row"><td><h3></h3></td><td><h3></h3></td><td><h3>Problem Task 1</h3></a></td><td><h3>100%</h3></td><td><h3></h3></td><tr/>
+  <tr class="raiting_row"><td><h3></h3></td><td><h3></h3></td><td><h3>Problem Task 2</h3></td><td><h3>100%</h3></td><td><h3></h3></td><tr/>
+  <tr class="raiting_row"><td><h3></h3></td><td><h3>week2</h3></td><td><h3>Tests</h3></td><td><h3>100%</h3></td><td><h3></h3></td><tr/>
+  <tr class="raiting_row"><td><h3></h3></td><td><h3></h3></td><td><h3>Problem Task 1</h3></td><td><h3>100%</h3></td><td><h3></h3></td><tr/>
+  <tr class="raiting_row"><td><h3></h3></td><td><h3></h3></a></td><td><h3>Problem Task 2</h3></a></td><td><h3>100%</h3></td><td><h3>1200</h3></td><tr/>
 </table>
 
 </div>
