--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Python Bursa</title>
+    <title>Course_info</title>
     <!-- Bootstrap -->
     <link href="../static/css/style.css" rel="stylesheet">
     <link href="../static/css/bootstrap.css" rel="stylesheet">
@@ -48,14 +48,14 @@
   <div class="panel-heading"><h2 class="course_program" >Course October-December 2015</h2></div>
 
 <table class="table table-hover">
-  <tr class="headtable_student"><td><h3>#</h3></td><td><h3>Name</h3></td><td><h3>Surname</h3></td><td><h3>Adress</h3></td><td><h3>Skype</h3></td><tr>
-  <tr class="head_study_table"><td><a href="student_detail.html"><h3>1</h3></a></td><td><a href="student_detail.html"><h3>Kostyantin</h3></a></td><td><a href="student_detail.html"><h3>Moroz</h3></a></td><td><a href="student_detail.html"><h3>Ukraine, Kharkiv, Velika Kilceva str.</h3></td><td><a href="student_detail.html"><h3>Kostyaf1777</h3></a></td><tr>
-  <tr class="row_table_student"><td><a href="student_detail.html"><h3>2</h3></a></td><td><a href="student_detail.html"><h3>Sergey</h3></a></td><td><a href="student_detail.html"><h3>Pogorelov</h3></a></td><td><a href="student_detail.html"><h3>Ukraine, Kharkiv, Velika Kilceva str.</h3></td><td><a href="student_detail.html"><h3>SergPogorelov</h3></a></td><tr>
-  <tr class="head_study_table"><td><a href="student_detail.html"><h3>3</h3></a></td><td><a href="student_detail.html"><h3>Petro</h3></a></td><td><a href="student_detail.html"><h3>Ivanov</h3></a></td><td><a href="student_detail.html"><h3>Ukraine, Kharkiv, Velika Kilceva str.</h3></td><td><a href="student_detail.html"><h3>PeterUa</h3></a></td><tr>
-  <tr class="row_table_student"><td><a href="student_detail.html"><h3>4</h3></a></td><td><a href="student_detail.html"><h3>Aleksandr</h3></a></td><td><a href="student_detail.html"><h3>Petrov</h3></a></td><td><a href="student_detail.html"><h3>Ukraine, Kharkiv, Velika Kilceva str.</h3></td><td><a href="student_detail.html"><h3>AlexPetrov</h3></a></td><tr>
-  <tr class="head_study_table"><td><a href="student_detail.html"><h3>5</h3></a></td><td><a href="student_detail.html"><h3>Dmitriy</h3></a></td><td><a href="student_detail.html"><h3>Shepelev</h3></a></td><td><a href="student_detail.html"><h3>Ukraine, Kharkiv, Velika Kilceva str.</h3></td><td><a href="student_detail.html"><h3>DShepel</h3></a></td><tr>
-  <tr class="row_table_student"><td><a href="student_detail.html"><h3>6</h3></a></td><td><a href="student_detail.html"><h3>Inokentiy</h3></a></td><td><a href="student_detail.html"><h3>Best</h3></a></td><td><a href="student_detail.html"><h3>Ukraine, Kharkiv, Velika Kilceva str.</h3></td><td><a href="student_detail.html"><h3>IBest</h3></a></td><tr>
-  <tr class="head_study_table"><td><a href="student_detail.html"><h3>7</h3></a></td><td><a href="student_detail.html"><h3>Vasiliy</h3></a></td><td><a href="student_detail.html"><h3>Sidorov</h3></a></td><td><a href="student_detail.html"><h3>Ukraine, Kharkiv, Velika Kilceva str.</h3></td><td><a href="student_detail.html"><h3>Sidor</h3></a></td><tr>
+  <tr class="headtable_student"><td><h3>No</h3></td><td><h3>Name</h3></td><td><h3>Surname</h3></td><td><h3>Address</h3></td><td><h3>Skype</h3></td><tr>
+  <tr class="head_study_table"><td><a href="student_detail.html"><h3>1</h3></a></td><td><a href="student_detail.html"><h3>Kostyantin</h3></a></td><td><a href="student_detail.html"><h3>Moroz</h3></a></td><td><a href="student_detail.html"><h3>Ukraine, Kharkiv, Velika Kilceva str.</h3></td><td><a href="student_detail.html"><h3>Kostyaf1777</h3></a></td></tr>
+  <tr class="row_table_student"><td><h3>2</h3></td><td><h3>Sergey</h3></td><td><h3>Pogorelov</h3></td><td><h3>Ukraine, Kharkiv, Velika Kilceva str.</h3></td><td><h3>SergPogorelov</h3></td></tr>
+  <tr class="head_study_table"><td><h3>3</h3></td><td><h3>Petro</h3></td><td><h3>Ivanov</h3></td><td><h3>Ukraine, Kharkiv, Velika Kilceva str.</h3></td><td><h3>PeterUa</h3></td></tr>
+  <tr class="row_table_student"><td><h3>4</h3></td><td><h3>Aleksandr</h3></td><td><h3>Petrov</h3></td><td><h3>Ukraine, Kharkiv, Velika Kilceva str.</h3></td><td><h3>AlexPetrov</h3></td></tr>
+  <tr class="head_study_table"><td><h3>5</h3></td><td><h3>Dmitriy</h3></td><td><h3>Shepelev</h3></td><td><h3>Ukraine, Kharkiv, Velika Kilceva str.</h3></td><td><h3>DShepel</h3></td></tr>
+  <tr class="row_table_student"><td><h3>6</h3></td><td><h3>Inokentiy</h3></td><td><h3>Best</h3></td><td><h3>Ukraine, Kharkiv, Velika Kilceva str.</h3></td><td><h3>IBest</h3></td></tr>
+  <tr class="head_study_table"><td><h3>7</h3></td><td><h3>Vasiliy</h3></td><td><h3>Sidorov</h3></td><td><h3>Ukraine, Kharkiv, Velika Kilceva str.</h3></td><td><h3>Sidor</h3></td></tr>
 </table>
 
 </div>
