--- a/templates/contact.html
+++ b/templates/contact.html
@@ -6,23 +6,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Contacts</title>
-    <link href="../static/css/bootstrap.css" rel="stylesheet">
-    <link href="../static/css/style.css" rel="stylesheet">
+    {% load staticfiles %}
+    <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
+    <link href="{% static 'css/style.css' %}" rel="stylesheet">
 </head>
 
 <body>
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
             <div class="navbar-header">
-                <img class="logo" src="../static/images/logpy.jpg" />
+                <img class="logo" src="{% static 'images/logpy.jpg' %}" />
             </div>
             <div class="container">
                 <ul class="nav navbar-nav">
-                    <li><a class="top_bar" href="index.html">Main</a>
+                    <li><a class="top_bar" href="{% url 'index' %}">Main</a>
                     </li>
-                    <li class="active"><a class="top_bar" href="contact.html">Contacts</a>
+                    <li class="active"><a class="top_bar" href="{% url 'contact' %}">Contacts</a>
                     </li>
-                    <li><a class="top_bar" href="student_list.html">Students</a>
+                    <li><a class="top_bar" href="{% url 'student_list' %}">Students</a>
                     </li>
                 </ul>
             </div>
@@ -32,7 +33,7 @@
         <div class="container">
             <div class="row" id="rombo">
                 <div class="col-lg-4">
-                    <img class="img-circle" src="../static/images/betman.jpg" alt="Generic placeholder image">
+                    <img class="img-circle" src="{% static 'images/betman.jpg' %}" alt="Generic placeholder image">
                     <div class="caption">
                         <h3><strong>Director</strong></h3>
                         <address>
@@ -44,7 +45,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4">
-                    <img class="img-circle" src="../static/images/cat.jpg" alt="Generic placeholder image">
+                    <img class="img-circle" src="{% static 'images/cat.jpg' %}" alt="Generic placeholder image">
                     <div class="caption">
                         <h3><strong>Manager</strong></h3>
                         <address>
@@ -56,7 +57,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4">
-                    <img class="img-circle" src="../static/images/robin.jpg" alt="Generic placeholder image">
+                    <img class="img-circle" src="{% static 'images/robin.jpg' %}" alt="Generic placeholder image">
                     <div class="caption">
                         <h3><strong>Founder </strong></h3>
                         <address>
@@ -73,16 +74,16 @@
     </div>
     <nav class="container">
         <ul class="pager">
-            <li class="previous"><a href="index.html"><span aria-hidden="true">&larr;</span>Main</a>
+            <li class="previous"><a href="{% url 'index' %}"><span aria-hidden="true">&larr;</span>Main</a>
             </li>
-            <li class="next"><a href="student_list.html">Students<span aria-hidden="true">&rarr;</span></a>
+            <li class="next"><a href="{% url 'student_list' %}">Students<span aria-hidden="true">&rarr;</span></a>
             </li>
         </ul>
     </nav>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="../static/js/bootstrap.js"></script>
+    <script src="{% static 'js/bootstrap.js' %}"></script>
 </body>
 
 </html>
