--- a/templates/index.html
+++ b/templates/index.html
@@ -6,24 +6,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Main | PyBursa</title>
-    <link href="../static/css/bootstrap.css" rel="stylesheet">
-    <link href="../static/css/style.css" rel="stylesheet">
-    <script src="../static/js/bootstrap.js"></script>
+    {% load staticfiles %}
+    <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
+    <link href="{% static 'css/style.css' %}" rel="stylesheet">
+    <script src="{% static 'js/bootstrap.js' %}"></script>
 </head>
 
 <body>
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
             <div class="navbar-header">
-                <img class="logo" src="../static/images/logpy.jpg" />
+                <img class="logo" src="{% static 'images/logpy.jpg' %}" />
             </div>
             <div class="container">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a class="top_bar" href="index.html">Main</a>
+                    <li class="active"><a class="top_bar" href="{% url 'index' %}">Main</a>
                     </li>
-                    <li><a class="top_bar" href="contact.html">Contacts</a>
+                    <li><a class="top_bar" href="{% url 'contact' %}">Contacts</a>
                     </li>
-                    <li><a class="top_bar" href="student_list.html">Students</a>
+                    <li><a class="top_bar" href="{% url 'student_list' %}">Students</a>
                     </li>
                 </ul>
             </div>
@@ -48,7 +49,7 @@
         </div>
         <div class="content" id="text">
             <p>
-                <img src="../static/images/cool.png" alt="Учёные, находящиеся в состоянии аффекта" class="rightimg">
+                <img src="{% static 'images/cool.png' %}" alt="Учёные, находящиеся в состоянии аффекта" class="rightimg">
                 <b class="text-warning">В наших секретных лабораториях в рамках проекта &laquo;Python&raquo; разрабатывалось
      ПО. В результате неудачного эксперимента большинство ученых, работавших 
      над прибором, подверглись воздействию успеха, и они, находясь в состоянии 
@@ -58,7 +59,7 @@
         </div>
         <nav class="container">
             <ul class="pager">
-                <li class="next"><a href="contact.html">Contacts<span aria-hidden="true">&rarr;</span></a>
+                <li class="next"><a href="{% url 'contact' %}">Contacts<span aria-hidden="true">&rarr;</span></a>
                 </li>
             </ul>
         </nav>
