--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -5,26 +5,26 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Student|Pogoryelov</title>
-    <link href="../static/css/bootstrap.css" rel="stylesheet">
-    <link href="../static/css/style.css" rel="stylesheet">
-    <script src="../static/js/bootstrap.js"></script>
+    {% load staticfiles %}
+    <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
+    <link href="{% static 'css/style.css' %}" rel="stylesheet">
+    <script src="{% static 'js/bootstrap.js' %}"></script>
 </head>
 
 <body>
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
             <div class="navbar-header">
-                <img class="logo" src="../static/images/logpy.jpg" />
+                <img class="logo" src="{% static 'images/logpy.jpg' %}" />
             </div>
             <div class="container">
                 <ul class="nav navbar-nav">
-                    <li><a class="top_bar" href="index.html">Main</a>
+                    <li><a class="top_bar" href="{% url 'index' %}">Main</a>
                     </li>
-                    <li><a class="top_bar" href="contact.html">Contacts</a>
+                    <li><a class="top_bar" href="{% url 'contact' %}">Contacts</a>
                     </li>
-                    <li><a class="top_bar" href="student_list.html">Students</a>
+                    <li><a class="top_bar" href="{% url 'student_list' %}">Students</a>
                     </li>
                 </ul>
             </div>
@@ -32,7 +32,7 @@
     </nav>
     <div class="container" id="mark">
         <h1>Pogoryelov Sergey</h1>
-        <img id="iam" src="../static/images/iam.jpg" align="top">
+        <img id="iam" src="{% static 'images/iam.jpg' %}" align="top">
         <h4>Student's card</h4>	
     </div>
     <div class="mytable">
@@ -191,7 +191,7 @@
     </div>
     <nav class="container" id="lin1">
         <ul class="pager">
-            <li class="previous"><a href="student_list.html"><span aria-hidden="true">&larr;</span>Students</a>
+            <li class="previous"><a href="{% url 'student_list' %}"><span aria-hidden="true">&larr;</span>Students</a>
             </li>
         </ul>
     </nav>
