--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -6,24 +6,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Students</title>
-    <link href="../static/css/bootstrap.css" rel="stylesheet">
-    <link href="../static/css/style.css" rel="stylesheet">
-    <script src="../static/js/bootstrap.js"></script>
+    {% load staticfiles %}
+    <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
+    <link href="{% static 'css/style.css' %}" rel="stylesheet">
+    <script src="{% static 'js/bootstrap.js' %}"></script>
 </head>
 
 <body>
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
             <div class="navbar-header">
-                <img class="logo" src="../static/images/logpy.jpg" />
+                <img class="logo" src="{% static 'images/logpy.jpg' %}" />
             </div>
             <div class="container">
                 <ul class="nav navbar-nav">
-                    <li><a class="top_bar" href="index.html">Main</a>
+                    <li><a class="top_bar" href="{% url 'index' %}">Main</a>
                     </li>
-                    <li><a class="top_bar" href="contact.html">Contacts</a>
+                    <li><a class="top_bar" href="{% url 'contact' %}">Contacts</a>
                     </li>
-                    <li class="active"><a class="top_bar" href="student_list.html">Students</a>
+                    <li class="active"><a class="top_bar" href="{% url 'student_list' %}">Students</a>
                     </li>
                 </ul>
             </div>
@@ -54,7 +55,7 @@
         </tr>
         <tr>
             <td>
-                <a href="student_detail.html">1</a>
+                <a href="{% url 'student_detail' %}">1</a>
             </td>
             <td>
                 Pogoryelov
@@ -140,13 +141,12 @@
     </table>
     <nav class="container">
         <ul class="pager">
-            <li class="previous"><a href="contact.html"><span aria-hidden="true">&larr;</span>Contacts</a>
+            <li class="previous"><a href="{% url 'contact' %}"><span aria-hidden="true">&larr;</span>Contacts</a>
             </li>
         </ul>
     </nav>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="../static/js/bootstrap.js"></script>
 </body>
 
 </html>
