--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -10,9 +10,10 @@
     
     <title>ItBursa students</title>
 
+{% load staticfiles %}
     <!-- Bootstrap core CSS -->
-    <link href="../static/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../static/css/style.css" rel="stylesheet">
+    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'css/style.css' %}" rel="stylesheet">
    
   </head>
 
@@ -31,9 +32,9 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li><a href="index.html">Main</a></li>
-            <li><a href="contact.html">Contacts</a></li>
-            <li class="active"><a href="student_list.html">Students</a></li>
+            <li><a href="{% url 'index' %}">Main</a></li>
+            <li><a href="{% url 'contact' %}">Contacts</a></li>
+            <li class="active"><a href="{% url 'student_list' %}">Students</a></li>
           </ul>
         </div>
       </div>
@@ -63,7 +64,7 @@
               <td scope="row"><a href="student_detail.html">1</a></td>
               <td>Surname_1</td>
               <td>Name_1</td>
-              <td>Adress_1</th>
+              <td>Address_1</th>
               <td>Skype_1</td>
             </tr>
             <tr>
