--- a/templates/index.html
+++ b/templates/index.html
@@ -37,6 +37,7 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
+                    {# <li class="active"><a href="{% url 'index' %}">Main</a></li> #}
                     <li class="active"><a href="/">Main</a></li>
                     <li><a href="/contact/">Contacts</a></li>
                     <li><a href="/student_list/">Students</a></li>
