--- a/templates/index.html
+++ b/templates/index.html
@@ -7,16 +7,16 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-		<linc href="../static/css/style.css" rel="stylesheet">
+		<linc href="/static/css/style.css" rel="stylesheet">
 
     <title>Main</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="../static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="../static/js/ie-emulation-modes-warning.js"></script>
+    <script src="/static/js/ie-emulation-modes-warning.js"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -43,9 +43,9 @@
 		      </div>
 		      <div id="navbar" class="navbar-collapse collapse">
 		        <ul class="nav navbar-nav">
-		  	      <li class="active"><a href="index.html">Main</a></li>
-		          <li><a href="contact.html">Contacts</a></li>
-		          <li><a href="student_list.html">Students</a></li>
+		  	      <li class="active"><a href="/main/">Main</a></li>
+		          <li><a href="/contacts/">Contacts</a></li>
+		          <li><a href="/students/">Students</a></li>
 		        </ul>
 		      </div>
 		    </div>
@@ -63,15 +63,15 @@
 Все разделы django будут освещены.</p>
 		</div>
     <div class="col-md-5">
-	    <img src="../static/images/python-logo.png" alt="Generic placeholder image">
+	    <img src="/static/images/python-logo.png" alt="Generic placeholder image">
     </div>
   </div>
 	<hr class="featurette-divider">
-	<script src="../static/js/jquery.min.js"></script>
-    <script src="../static/js/bootstrap.min.js"></script>
+	<script src="/static/js/jquery.min.js"></script>
+    <script src="/static/js/bootstrap.min.js"></script>
     <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
-    <script src="../static/js/vendor/holder.min.js"></script>
+    <script src="/static/js/vendor/holder.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../static/js/ie10-viewport-bug-workaround.js"></script>
+    <script src="/static/js/ie10-viewport-bug-workaround.js"></script>
   </body>
 </html>
